prevent dragging in speak mode on iOS

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -337,6 +337,15 @@ header .btn {
     }
   }
 }
+header.speaking, .board.speak {
+  -webkit-touch-callout: none !important; /* iOS Safari */
+    -webkit-user-select: none !important; /* Safari */
+     -khtml-user-select: none !important; /* Konqueror HTML */
+       -moz-user-select: none !important; /* Firefox */
+        -ms-user-select: none !important; /* Internet Explorer/Edge */
+            user-select: none !important; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */  
+}
 header.speaking #identity {
   width: auto;
   padding-right: 2px;
@@ -1598,6 +1607,7 @@ body.pretty_loader #loading_box {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
 #sidebar .holder {
   position: relative;
   width: 100%;
